[project]
name = "querydoc"
version = "0.1.0"
description = "query your doc"
authors = [
    {name = "Md Wahiduzzaman Suva",email = "wshuvo360@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
